// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateFrequencySelect renders correctly 1`] = `
<UpdateFrequencySelect
  updateSettings={
    Object {
      "autoUpdateData": true,
      "lastUpdateCheck": 2,
      "updateInterval": 5,
      "updateUnits": "minutes",
    }
  }
  wfModuleId={1}
>
  <div
    className="version-item"
  >
    <div
      className=""
    >
      <span
        className="content-3 t-d-gray"
      >
        Update: 
      </span>
      <span
        className="content-3 t-f-blue"
        onClick={[Function]}
      >
        Auto, every 5 minutes
      </span>
    </div>
    <div
      className="content-3 t-m-gray"
    >
      Last checked: 
      December 31 1969 - 04:00 PM
    </div>
    <Modal
      autoFocus={true}
      backdrop={true}
      backdropTransitionTimeout={150}
      className="dialog-window"
      fade={true}
      isOpen={false}
      keyboard={true}
      modalTransitionTimeout={300}
      toggle={[Function]}
      zIndex={1050}
    />
  </div>
</UpdateFrequencySelect>
`;

exports[`UpdateFrequencySelect renders correctly 2`] = `
<UpdateFrequencySelect
  updateSettings={
    Object {
      "autoUpdateData": true,
      "lastUpdateCheck": 2,
      "updateInterval": 5,
      "updateUnits": "minutes",
    }
  }
  wfModuleId={1}
>
  <div
    className="version-item"
  >
    <div
      className=""
    >
      <span
        className="content-3 t-d-gray"
      >
        Update: 
      </span>
      <span
        className="content-3 t-f-blue"
        onClick={[Function]}
      >
        Auto, every 5 minutes
      </span>
    </div>
    <div
      className="content-3 t-m-gray"
    >
      Last checked: 
      December 31 1969 - 04:00 PM
    </div>
    <Modal
      autoFocus={true}
      backdrop={true}
      backdropTransitionTimeout={150}
      className="dialog-window"
      fade={true}
      isOpen={true}
      keyboard={true}
      modalTransitionTimeout={300}
      toggle={[Function]}
      zIndex={1050}
    />
  </div>
</UpdateFrequencySelect>
`;
